# Game-Server-Controller-FE

./: .gitignore  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-test.yml  release.yml
public/: index.html
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/state/: mod.rs
src/components/Common/: Layout.tsx  ToastContainer.tsx
src/components/Dashboard/: Dashboard.tsx
src/components/NodeManager/: FileDialogs.tsx  FileExplorer.tsx  NodeDetail.tsx  NodeInfoCard.tsx  NodeList.tsx  NodeModal.tsx
src/components/ServerManager/: ServerList.tsx  ServerModal.tsx
src/components/Settings/: Settings.tsx
src/services/: api.ts  filesApi.ts
src/store/nodes/: nodesSlice.ts
src/store/servers/: serversSlice.ts
src/store/settings/: settingsStore.ts
src/store/toast/: toastStore.ts
src/styles/: global.css
src/types/: api.ts  files.ts
